# apiari

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  check.sh
.apiari/skills/: bee-autonomy.md  code-review.md
.cargo/: config.toml.example
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.swarm/: setup-commands  worktree-links
crates/apiari/: Cargo.toml
crates/apiari/src/: config.rs  config_migrate.rs  config_set.rs  config_validate.rs  git_safety.rs  init.rs  main.rs  mcp_swarm.rs  test_utils.rs  validate_bash.rs
crates/apiari/src/buzz/: auto_bot.rs  auto_bot_runner.rs  config.rs  conversation.rs  mod.rs  review.rs  schedule.rs  swarm_reconciler.rs  worker.rs  worker_hooks.rs
crates/apiari/src/buzz/channel/: telegram.rs
crates/apiari/src/buzz/coordinator/: actions.rs  audit.rs  devmode.rs  eval.rs  memory.rs  mod.rs  prompt.rs  swarm_client.rs
crates/apiari/src/buzz/coordinator/skills/: apiari.rs  config.rs  github.rs  linear.rs  memory.rs  mod.rs  notion.rs  scripts.rs  signals.rs  swarm.rs
crates/apiari/src/buzz/daemon/: config.rs
crates/apiari/src/buzz/orchestrator/: action.rs  mod.rs  notify.rs  reconcile.rs  task.rs  workflow.rs
crates/apiari/src/buzz/orchestrator/graph/: builtin.rs  mod.rs  walker.rs
crates/apiari/src/buzz/pipeline/: batch.rs  format.rs  log.rs  mod.rs  rule.rs
crates/apiari/src/buzz/signal/: mod.rs  store.rs
crates/apiari/src/buzz/task/: attempt.rs  engine.rs  event_store.rs  mod.rs  rules.rs  store.rs
crates/apiari/src/buzz/watcher/: email.rs  github.rs  linear.rs  mod.rs  notion.rs  review_queue.rs  script.rs  sentry.rs  swarm.rs
crates/apiari/src/daemon/: doctor.rs  http.rs  mod.rs  morning_brief.rs  socket.rs  swarm_ipc.rs  worker_manager.rs
crates/apiari/src/shells/: mod.rs
crates/apiari/src/ui/: app.rs  daemon_client.rs  history.rs  mod.rs  onboarding.rs  render.rs  settings.rs  wizard.rs
crates/apps/apiari/: CLAUDE.md  Cargo.toml
crates/apps/swarm/: Cargo.toml  README.md
crates/apps/swarm/.cargo/: config.toml.example
crates/apps/swarm/.github/workflows/: ci.yml  release.yml
crates/apps/swarm/profiles/: default.md
crates/apps/swarm/src/: lib.rs  main.rs
crates/apps/swarm/src/core/: agent_card.rs  git.rs  log.rs  profile.rs  state.rs
crates/apps/swarm/src/daemon/: a2a_server.rs  event_logger.rs  mod.rs
crates/apps/swarm/src/daemon_tui/: app.rs  mod.rs
crates/apps/swarm/tests/: client_types.rs  daemon_integration.rs
crates/buzz/: Cargo.toml
crates/buzz/src/: config.rs
crates/buzz/src/channel/: mod.rs  telegram.rs
crates/buzz/src/coordinator/: audit.rs  mod.rs  prompt.rs
crates/buzz/src/coordinator/skills/: sentry.rs  swarm.rs
crates/buzz/src/daemon/: config.rs  mod.rs
crates/buzz/src/pipeline/: batch.rs  format.rs  log.rs  mod.rs  rule.rs
crates/buzz/src/signal/: mod.rs  store.rs
crates/buzz/src/watcher/: github.rs  mod.rs  sentry.rs  swarm.rs
crates/claude-sdk/: Cargo.toml
crates/core/tui/: CLAUDE.md
crates/core/workflow/: Cargo.toml
crates/core/workflow/src/: db.rs  engine.rs  lib.rs  step.rs  types.rs  workflow.rs
crates/core/workflow/src/tests/: helpers.rs  mod.rs  test_compensation.rs  test_context.rs  test_coverage_gaps.rs  test_cycle_detection.rs  test_db.rs  test_edge_cases.rs  test_goto.rs  test_integration.rs  test_linear.rs  test_registry.rs  test_retry.rs  test_signals.rs  test_timeout.rs  test_timer.rs
crates/gemini-sdk/: Cargo.toml  README.md
crates/gemini-sdk/src/: client.rs  error.rs  lib.rs  transport.rs  types.rs
crates/gemini-sdk/tests/: integration.rs
crates/hive/: Cargo.toml  build.rs
crates/hive/src/: bot.rs  config_watcher.rs  db.rs  docs.rs  events.rs  followup.rs  init.rs  lib.rs  main.rs  pr_feedback.rs  pr_review.rs  publish.rs  remote.rs  research.rs  review.rs  routes.rs  sentry_watcher.rs  setup.rs  simulator.rs  stt.rs  swarm.rs  tick.rs  tts.rs  usage.rs  watcher.rs
crates/hive/src/buzz/: config.rs
crates/hive/src/buzz/watcher/: linear.rs  mod.rs
crates/hive/src/daemon/: mod.rs  swarm_watcher.rs  tui_socket.rs
crates/hive/src/keeper/: discovery.rs
crates/hive/src/keeper/tui/: mod.rs
crates/hive/src/ui/: app.rs  mod.rs  render.rs
crates/hive/tests/: buzz_pipeline.rs  cli_smoke.rs
crates/swarm/: CLAUDE.md  Cargo.toml
crates/swarm/profiles/: default.md
crates/swarm/src/: lib.rs  main.rs
crates/swarm/src/agent_tui/: mod.rs
crates/swarm/src/core/: a2a_state.rs  agent.rs  agent_card.rs  config.rs  git.rs  ipc.rs  mod.rs  prerequisites.rs  state.rs
crates/swarm/src/daemon/: agent_supervisor.rs  ipc_client.rs  lifecycle.rs  managed_agent.rs  mod.rs  protocol.rs
crates/swarm/src/daemon_tui/: app.rs  render.rs
crates/swarm/src/tui/: mod.rs  onboarding.rs
crates/swarm/tests/: client_types.rs  daemon_connection.rs
crates/tui/: Cargo.toml
docs/: architecture.md  design-system.md  getting-started.md  testing.md  ui-architecture.md  ui-component-map.md  ui-primitives.md  web-contract.md
evals/: README.md  chat-main-compat.yaml  followup-restart-resume.yaml  provider-parity-basic.yaml  worker-lifecycle-happy-path.yaml  workspace-mobile-shell.yaml
hooks/: pre-push
scripts/: apple_dispatch_router.swift  install-hooks.sh  mock-agent  run-signed-hive.sh  setup-e2e-workspace.sh
src/: config.rs  daemon.rs  init.rs  main.rs
src/ui/: app.rs  daemon_client.rs  history.rs  mod.rs  render.rs
tests/: api_test.rs  db_test.rs  routes_test.rs  streaming_test.rs
tts/: requirements.txt  server.py  setup.sh
web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.chat.config.ts  playwright.config.ts  playwright.e2e.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/e2e/: app.spec.ts  chat-demo.spec.ts  chat.spec.ts  reset-check.spec.ts  worker-lifecycle.spec.ts
web/public/: manifest.json  tts-test.html
web/src/: App.css  App.module.css  App.tsx  api.ts  consoleConfig.ts  index.css  main.tsx  repoSync.ts  routeUtils.ts  soundCues.ts  test-setup.ts  theme.css  types.ts  useWorkspaceConsoleState.ts  voice.ts  wakeLock.ts
(+189 files in other folders)
