[workspace]
resolver = "3"
members = [
    "crates/apiari",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
apiari-common = "0.1.0"
apiari-tui = "0.1.0"
apiari-claude-sdk = "0.1.0"
apiari-codex-sdk = "0.1.0"
chrono-tz = "0.9"
apiari-swarm = { version = "0.1.3", default-features = false }
