[workspace]
resolver = "2"
members = [
    # Applications
    "crates/apps/apiari",
    "crates/apps/hive",
    "crates/apps/swarm",
    # Core libraries
    "crates/core/common",
    "crates/core/tui",
    "crates/core/workflow",
    # Provider SDKs
    "crates/providers/claude-sdk",
    "crates/providers/codex-sdk",
    "crates/providers/gemini-sdk",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates — apps
apiari-hive = { path = "crates/apps/hive" }
apiari-swarm = { path = "crates/apps/swarm", default-features = false }
# Internal crates — core
apiari-common = { path = "crates/core/common" }
apiari-tui = { path = "crates/core/tui" }
apiari-workflow = { path = "crates/core/workflow" }
# Internal crates — providers
apiari-claude-sdk = { path = "crates/providers/claude-sdk" }
apiari-codex-sdk = { path = "crates/providers/codex-sdk" }
apiari-gemini-sdk = { path = "crates/providers/gemini-sdk" }

# Shared external dependencies
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
libc = "0.2"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
