[package]
name = "apiari"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/ApiariTools/apiari"
description = "Ops coordinator CLI — daemon, signals, TUI, and swarm integration"

[[bin]]
name = "apiari"
path = "src/main.rs"

[dependencies]
apiari-claude-sdk.workspace = true
apiari-codex-sdk.workspace = true
apiari-gemini-sdk.workspace = true
apiari-swarm.workspace = true
apiari-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml = "0.8"
toml_edit = "0.22"
dirs = "6"
libc = "0.2"
rusqlite.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures = "0.3"
reqwest.workspace = true
async-trait.workspace = true
tokio-util = { version = "0.7", features = ["rt", "compat"] }
chrono-tz.workspace = true
async-imap = "0.10"
async-native-tls = "0.5"
mail-parser = "0.9"
unicode-width = "0.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ name }{ binary-ext }"
pkg-fmt = "bin"

[dev-dependencies]
tempfile = "3"
