[package]
name = "apiari"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/ApiariTools/apiari"
description = "Ops coordinator CLI — daemon, signals, TUI, and swarm integration"

default-run = "apiari"

[[bin]]
name = "apiari"
path = "src/main.rs"

[dependencies]
apiari-claude-sdk.workspace = true
apiari-codex-sdk.workspace = true
apiari-gemini-sdk.workspace = true
apiari-swarm = { workspace = true, features = ["client", "server"] }
a2a-types = "0.1"
apiari-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
toml_edit = "0.22"
dirs = "6"
libc.workspace = true
rusqlite = { version = "0.34", features = ["bundled"] }
ratatui.workspace = true
crossterm.workspace = true
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
chrono-tz = "0.10"
async-imap = "0.10"
async-native-tls = "0.5"
mail-parser = "0.9"
unicode-width = "0.2"
uuid.workspace = true
serde_yaml = "0.9"
axum = { version = "0.8", features = ["ws"] }
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ name }{ binary-ext }"
pkg-fmt = "bin"

[dev-dependencies]
tempfile = "3"
