[package]
name = "buzz"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "buzz"
path = "src/lib.rs"

[dependencies]
apiari-claude-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
color-eyre.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
