[package]
name = "apiari-gemini-sdk"
version = "0.2.1"
edition.workspace = true
license.workspace = true
description = "Rust SDK for the Gemini CLI — spawn and stream gemini execution sessions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
