[package]
name = "apiari-hive"
version = "0.5.3"
edition.workspace = true
description = "Workspace chat hub — multi-bot, multi-provider AI assistant with swarm integration"
license.workspace = true
repository = "https://github.com/ApiariTools/hive"
keywords = ["ai", "chat", "workspace", "assistant"]
categories = ["command-line-utilities"]
include = ["src/**/*", "web/dist/**/*", "build.rs", "Cargo.toml", "README.md", "LICENSE", "tts/*.py", "tts/*.sh", "tts/*.txt", "hooks/**/*"]

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
chrono.workspace = true
croner = "3"
clap.workspace = true
color-eyre.workspace = true
futures-core = "0.3"
futures-util = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
serde.workspace = true
apiari-claude-sdk.workspace = true
apiari-codex-sdk.workspace = true
apiari-gemini-sdk.workspace = true
async-stream = "0.3"
async-trait = "0.1"
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
toml = "0.8"
apiari-swarm = { workspace = true, features = ["client", "server"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
