[package]
name = "apiari-workflow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Railway-oriented durable workflow engine with SQLite persistence"

[dependencies]
async-trait = "0.1"
chrono.workspace = true
color-eyre.workspace = true
rusqlite = { version = "0.34", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
